# pi-i2c

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp  mpl3115a2_main.cpp  mpu6050_main.cpp
lib/: CMakeLists.txt
lib/header/: singleton.hpp
lib/header/pi/: pii2c.hpp  pii2cbus.hpp
lib/header/pi/interfaces/: MPL3115A2.hpp  MPU6050.hpp
lib/src/pi/: pibcm2835.cpp  pibcm2835.hpp  pii2c.cpp  pii2c.hpp  pii2cbus.cpp  pii2cbus.hpp
lib/src/pi/interfaces/: MPL3115A2.cpp  MPU6050.cpp
